# FastKLEE

./: Notes.md  README.md  setup.sh
ccured/: AnalysisState.cpp  AnalysisState.hpp  CMakeLists.txt  NesCheck.cpp  NesCheckFast.cpp  PTAWrapper.cpp  PTAWrapper.hh  neschecklib.c
ccured/program-dependence-graph/include/: PDGUtils.hh  PTAWrapper.hh
examples/fastklee-test/: cat.bc  run-fastklee.sh  run-instrumentation.sh  run-type-inference-system.sh  test.env
examples/offset/: klee-last  neschecklib.bc  run-ccured.sh  test-linked.bc  test-opt.bc  test.bc  test.c  test.ll  test.nescheckou  test.nescheckout  test.opt.bc
examples/offset/klee-out-0/: assembly.ll  info  run.istats  run.stats  test000001.ktest  warnings.txt
examples/offset/klee-out-1/: info  run.istats  run.stats  test000001.ktest  warnings.txt
examples/offset/klee-out-2/: assembly.ll  info  run.istats  run.stats
include/klee/: ExecutionState.h  klee.h
lib/Core/: AddressSpace.cpp  Executor.cpp  Executor.h
tools/klee/: CMakeLists.txt  main.cpp
